# commmate

./: .gitignore  README.md
.github/workflows/: api-deploy.yml  backend-deploy.yml  chat-deploy.yml  docker-publish.yml  site-deploy.yml
api/: application.py  requirements.txt
chat/: Dockerfile  app.py  application.py  myassistant.py  package-lock.json  package.json  requirements.txt
chat/public/: index.html
chat/src/: App.css  App.js
main/: contato.html  index.html  sobre.html
main/js/: scripts.js
site/: contato.html  foorter.html  header.html  index.html  sobre.html
site/css/: styles.css
src/apis/: README.md  setup.cfg  setup.py
src/apis/imediatonautica/: __init__.py  application.py  config.py
src/apis/imediatonautica/chats/: __init__.py  services.py  views.py
src/apis/imediatonautica/tests/: __init__.py  conftest.py  helpers.py
src/apis/imediatonautica/users/: enums.py  models.py  persistors.py  services.py
src/assistants/imediatonautica/: tides.py
src/assistants/imediatonautica/functions/: assistant_function.py
src/assistants/imediatonautica/functions/coordinates/: get_coordinates.py
src/assistants/imediatonautica/functions/navigation/: get_min_depth.py  is_safe_to_navigate.py
src/assistants/imediatonautica/functions/tides/: get_tides.py
src/crawlers/youtube/: run.py
src/events/: event_handler.py  event_handler_bkp.py  event_register.py
src/sites/imediatonautica/chat/: .gitignore
src/sites/imediatonautica/chat/public/: index.html
src/sites/imediatonautica/static/: README.md
store/: README.md
(+3 files in other folders)
