[metadata]
description-file = README.md

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[egg_info]
tag_build =

[flake8]
show-source = True
max-line-length = 120
radon-max-cc = 20
max-complexity = 20

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = imediatonautica
omit =
    tests/*

[coverage:report]
show_missing = True
fail_under = 39
exclude_lines =
    pragma: no cover
    __name__ == '__main__'
    pass
